Add new signal message type

--- a/src/audio_interfaces/CMakeLists.txt
+++ b/src/audio_interfaces/CMakeLists.txt
@@ -36,6 +36,7 @@ endif()
 set(msg_files
   "msg/Correlations.msg"
   "msg/Spectrum.msg"
+  "msg/Signals.msg"
 )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
