--- a/src/audio_interfaces/CMakeLists.txt
+++ b/src/audio_interfaces/CMakeLists.txt
@@ -38,6 +38,7 @@ set(msg_files
   "msg/Spectrum.msg"
   "msg/Signals.msg"
   "msg/SignalsFreq.msg"
+  "msg/MicPositions.msg"
 )
 
 rosidl_generate_interfaces(${PROJECT_NAME}
