--- a/src/audio_simulation/package.xml
+++ b/src/audio_simulation/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>crazyflie_audio_simulation</name>
+  <name>audio_simulation</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="emiliaszym@gmail.com">emilia-szymanska</maintainer>
