--- a/src/audio_bringup/package.xml
+++ b/src/audio_bringup/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>audio_publisher</name>
+  <name>audio_bringup</name>
   <version>0.0.1</version>
-  <description>Publishing of audio data from different sources</description>
+  <description>Launch audio pipeline</description>
   <maintainer email="frederike.duembgen@epfl.ch">duembgen</maintainer>
   <license>Apache License 2.0</license>
 
