--- a/src/audio_simulation/package.xml
+++ b/src/audio_simulation/package.xml
@@ -3,11 +3,11 @@
 <package format="3">
   <name>audio_simulation</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Simulating audio data received by microphones</description>
   <maintainer email="emiliaszym@gmail.com">emilia-szymanska</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
   
-  <!--  <depend>pyroomacoustics</depend> -->
+  <depend>pyroomacoustics</depend>
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
