Move message creating to own module

--- a/src/audio_interfaces/CMakeLists.txt
+++ b/src/audio_interfaces/CMakeLists.txt
@@ -20,7 +20,6 @@ find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
-# find_package(<dependency> REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
@@ -47,5 +46,9 @@ rosidl_generate_interfaces(${PROJECT_NAME}
 )
 
 ament_export_dependencies(rosidl_default_runtime)
+
+## added to install the python module audio_interfaces_py
+find_package(ament_cmake_python REQUIRED)
+ament_python_install_package(audio_interfaces_py/)
 
 ament_package()
