--- a/src/topic_writer/package.xml
+++ b/src/topic_writer/package.xml
@@ -2,10 +2,12 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>topic_writer</name>
-  <version>0.0.1</version>
-  <description>Write topics to csv file</description>
+  <version>0.0.0</version>
+  <description>TODO: Package description</description>
   <maintainer email="frederike.duembgen@epfl.ch">duembgen</maintainer>
-  <license>Apache License 2.0</license>
+  <license>TODO: License declaration</license>
+
+  <buildtool_depend>ament_python</buildtool_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
