--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,6 @@ stash/
 notebooks/.ipynb_checkpoints
 notebooks/*.pkl
 notebooks/figures/
+notebooks/results/
 experiments/testing/*
 experiments/*/results/
