Add analysis of windowing experiments

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,18 @@ stash/
 notebooks/.ipynb_checkpoints
 notebooks/results/
 notebooks/plots/
+
+
+# latex stuff
+*.aux
+*.lof
+*.log
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+.*.lb
