--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,8 @@ repos:
     hooks:
       - id: black
         language_version: python3 # Should be a command that runs python3.6+
+  - repo: https://github.com/duembgen/scripts
+    rev: v0.0.7 # Replace by any tag/version
+    hooks:
+      - id: remove-output
+        language_version: python3 # Should be a command that runs python3.6+
