--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-pyserial
+pyserial~=3.5
+
+numpy~=1.17.4
+scipy~=1.6.2
+sounddevice~=0.4.1
+matplotlib~=3.1.2
+pyroomacoustics~=0.4.3
+pytest~=4.6.9
+setuptools~=45.2.0
+cflib~=0.1.14.2
