--- a/params/buzzer_test.yaml
+++ b/params/buzzer_test.yaml
@@ -4,14 +4,16 @@
 gateway:
   ros__parameters:
     send_audio_enable: 1
-    min_freq: 3000
-    max_freq: 5000
+    min_freq: 1000
+    max_freq: 6000
     delta_freq: 100 # not used without prop
     n_average: 1 # not used without snr
-    filter_snr_enable: 3
+    filter_snr_enable: 6
     filter_prop_enable: 0
     window_type: 2
 audio_plotter:
   ros__parameters:
-    min_freq: 2000
-    max_freq: 5000
+    min_freq: 1000
+    max_freq: 6000
+    min_amp: 1e-5
+    max_amp: 1e2
