--- a/params/flying.yaml
+++ b/params/flying.yaml
@@ -5,7 +5,7 @@ gateway:
     max_freq: 5000
     delta_freq: 100 # not used without prop
     n_average: 1 # not used without snr
-    filter_snr_enable: 1
+    bin_selection: 1
     filter_prop_enable: 1
     buzzer_effect: 0
     buzzer_freq: 0
