--- a/params/sweep_test.yaml
+++ b/params/sweep_test.yaml
@@ -8,7 +8,7 @@ gateway:
     max_freq: 6000
     delta_freq: 100 # not used without prop
     n_average: 1 # not used without snr
-    filter_snr_enable: 5
+    bin_selection: 5
     filter_prop_enable: 0
     window_type: 2
 audio_plotter:
