--- a/params/audio_test.yaml
+++ b/params/audio_test.yaml
@@ -8,7 +8,7 @@ gateway:
     max_freq: 2000
     delta_freq: 100 # not used without prop
     n_average: 1 # not used without snr
-    filter_snr_enable: 3
+    bin_selection: 3
     filter_prop_enable: 0
     window_type: 1
 audio_plotter:
