--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,10 @@ stash/
 # evaluation
 *.pk
 *.pkl
-notebooks/.ipynb_checkpoints
-notebooks/results/
-notebooks/plots/
+python/.ipynb_checkpoints
+python/results/
+python/plots/
+python/plots_doa/
 
 
 # latex stuff
