--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,8 @@ python/.ipynb_checkpoints
 python/results/
 python/plots/
 python/plots_doa/
+backup/
+epuck-audio/
 
 
 # latex stuff
@@ -88,3 +90,4 @@ python/plots_doa/
 *.cb
 *.cb2
 .*.lb
+
