--- a/params/flying.yaml
+++ b/params/flying.yaml
@@ -4,5 +4,5 @@ gateway:
 wall_detection:
   ros__parameters:
     mode: 0 # 0: FSLICE, 1: DSLICE
-    drone: 1 # 0: none, 1: buzzer, 2: flying
-logging: "info"
+    drone: 2 # 0: none, 1: buzzer, 2: flying
+logging: "warn"
