Rename experiments to new datasets repository

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "experiments"]
 	path = experiments
 	url = git@github.com:lcav/drone-experiments
+[submodule "datasets"]
+	path = datasets
+	url = ./datasets
