Update to ros galactic

--- a/src/audio_bringup/setup.cfg
+++ b/src/audio_bringup/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/audio_bringup
+script_dir=$base/lib/audio_bringup
 [install]
-install-scripts=$base/lib/audio_bringup
+install_scripts=$base/lib/audio_bringup
