--- a/src/audio_publisher/setup.cfg
+++ b/src/audio_publisher/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/audio_publisher
+script_dir=$base/lib/audio_publisher
 [install]
-install-scripts=$base/lib/audio_publisher
+install_scripts=$base/lib/audio_publisher
