--- a/src/audio_simulation/setup.cfg
+++ b/src/audio_simulation/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/audio_simulation
+script_dir=$base/lib/audio_simulation
 [install]
-install-scripts=$base/lib/audio_simulation
+install_scripts=$base/lib/audio_simulation
