--- a/src/audio_gtsam/setup.cfg
+++ b/src/audio_gtsam/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/audio_gtsam
+script_dir=$base/lib/audio_gtsam
 [install]
-install-scripts=$base/lib/audio_gtsam
+install_scripts=$base/lib/audio_gtsam
