--- a/src/audio_stack/setup.cfg
+++ b/src/audio_stack/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/audio_stack
+script_dir=$base/lib/audio_stack
 [install]
-install-scripts=$base/lib/audio_stack
+install_scripts=$base/lib/audio_stack
