--- a/src/crazyflie_crtp/setup.cfg
+++ b/src/crazyflie_crtp/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/crazyflie_crtp
+script_dir=$base/lib/crazyflie_crtp
 [install]
-install-scripts=$base/lib/crazyflie_crtp
+install_scripts=$base/lib/crazyflie_crtp
