--- a/src/crazyflie_demo/setup.cfg
+++ b/src/crazyflie_demo/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/crazyflie_demo
+script_dir=$base/lib/crazyflie_demo
 [install]
-install-scripts=$base/lib/crazyflie_demo
+install_scripts=$base/lib/crazyflie_demo
