--- a/src/epuck_com/setup.cfg
+++ b/src/epuck_com/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/epuck_com
+script_dir=$base/lib/epuck_com
 [install]
-install-scripts=$base/lib/epuck_com
+install_scripts=$base/lib/epuck_com
