--- a/src/topic_plotter/setup.cfg
+++ b/src/topic_plotter/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/topic_plotter
+script_dir=$base/lib/topic_plotter
 [install]
-install-scripts=$base/lib/topic_plotter
+install_scripts=$base/lib/topic_plotter
