--- a/src/topic_writer/setup.cfg
+++ b/src/topic_writer/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/topic_writer
+script_dir=$base/lib/topic_writer
 [install]
-install-scripts=$base/lib/topic_writer
+install_scripts=$base/lib/topic_writer
